# binance50

./: PHASE_23_REPORT.md  PHASE_26_REPORT.md  README.md  REPORT.md  check_project_output.txt  code_review.md  code_review.txt  code_review_diff.patch  commit_message.txt  dummy.py  fix_check_project.py  fix_check_project2.py  fix_check_project3.py  fix_dict_typing.py  fix_doctor.py  fix_final_lint.py  fix_final_lint2.py  fix_final_tests.py  fix_missing_files.py  fix_repo_root.py  fix_script.py  fix_test_cli.py  fix_test_cli_secrets.py  fix_test_environment.py  fix_test_mode.py  fix_test_safety.py  generate_phase_23_report.py  generate_phase_26_report.py  generate_report.py  make_regimes.py  mypy.ini  patch_check_project.py  patch_check_project_config4.py  patch_classifier.py  patch_cli.py  patch_cli_fixtures.py  patch_cli_get_config.py  patch_config.py  patch_config_app.py  patch_config_default2.py  (+36 more)
binance50/: .env.example  .gitignore  PHASE15_REPORT.md  PHASE17_REPORT.md  PHASE4_REPORT.md  README.md  REPORT.md  check_out.txt  diff.patch  fix_check_project.patch  fix_circular_stream_names.py  fix_cli.patch  fix_clock.patch  fix_health.patch  fix_lines.py  fix_models.patch  fix_policy.patch  fix_rest.patch  fix_ws.patch  format.py  patch_cache.py  patch_cache_any.py  patch_check.py  patch_circular.py  patch_circular2.py  patch_circular3.py  patch_cli.py  patch_cli2.py  patch_cli3.py  patch_cli_fix.py  patch_cli_get_config.py  patch_cli_indent.py  patch_cli_indent2.py  patch_cli_indent3.py  patch_cli_init.py  patch_cli_market_scope.py  patch_cli_market_scope_fix.py  patch_cli_market_scope_fix2.py  patch_core_ex_imports.py  patch_docs.py  (+16 more)
binance50/config/: default.yaml  default.yaml.orig  default.yaml.rej  environments.yaml  logging.yaml
binance50/docs/: ARCHITECTURE.md  PHASE_27_REPORT.md  PHASE_PLAN.md  PHASE_PLAN.md.orig  PHASE_PLAN.md.rej  (+1 more)
(+916 files in other folders)
