[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binance50"
version = "0.1.0"
description = "Binance algorithmic trading bot"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py311']
