[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binance50"
version = "0.1.0"
description = "Binance algorithmic trading bot"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic.*", "yaml.*", "dotenv.*", "typer.*", "rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "binance50.config.models"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "binance50.cli"
disallow_untyped_decorators = false
